[project]
name = "simple-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-mongodb>=0.9.0",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
]
